# pavedb-sdk-python

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  gitlab-ci.yml  pyproject.toml
paveclient/: __init__.py  client.py  errors.py
pavesdk/: __init__.py  batch.py  client.py  compat.py  interface.py  providers.py
pavesdk/examples/: README.md  __init__.py  __main__.py  http_search.py  observability.py
src/pavedb_client/: __init__.py
tests/: test_http_client.py
