# (C) 2026 Rodrigo Rodrigues da Silva <rodrigo@flowlexi.com>
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pavedb-sdk"
version = "0.1.1"
description = "Python SDK for the PaveDB /v1 API"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Flowlexi", email = "pavedb@flowlexi.com" }
]
dependencies = [
  "httpx>=0.27"
]

[project.optional-dependencies]
test = [
  "pytest>=8"
]

[tool.setuptools.packages.find]
include = ["pavesdk*"]

[tool.setuptools.package-data]
pavesdk = ["py.typed"]
"pavesdk.examples" = ["README.md"]

[project.urls]
Homepage = "https://gitlab.com/flowlexi/pavedb-sdk-python"
Source = "https://gitlab.com/flowlexi/pavedb-sdk-python"
Mirror = "https://github.com/rodrigopitanga/pavedb-sdk-python"
